fixed animation cut off bug

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -49,10 +49,16 @@ td {
 /*------------status color animation-----------*/
 
 .up {
-  animation: green 5s;
+  animation: green 4s;
 }
 .down {
-  animation: red 5s;
+  animation: red 4s;
+}
+.up2 {
+  animation: green2 4s;
+}
+.down2 {
+  animation: red2 4s;
 }
 @keyframes green {
   0% {
@@ -63,6 +69,22 @@ td {
   }
 }
 @keyframes red {
+  0% {
+    color: red;
+  }
+  100% {
+    color: black;
+  }
+}
+@keyframes green2 {
+  0% {
+    color: green;
+  }
+  100% {
+    color: black;
+  }
+}
+@keyframes red2 {
   0% {
     color: red;
   }
